--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Swadhin — Simple Admin</title>
+  <title>SHADHIN — Admin</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body { font-family: system-ui, Arial; max-width: 900px; margin: 20px auto; padding: 10px; }
