--- a/admin.html
+++ b/admin.html
@@ -6,70 +6,164 @@
 <title>Admin Dashboard — Contacts</title>
 
 <style>
+/* =========================================================
+   🍎 iOS 26 / visionOS PREMIUM ADMIN UI (GLASS + MOTION)
+   ========================================================= */
+
 :root{
-  --bg:#060b1a;
-  --glass:rgba(255,255,255,.12);
-  --border:rgba(255,255,255,.18);
+  --bg:#050914;
+  --glass:rgba(255,255,255,.14);
+  --glass-strong:rgba(255,255,255,.22);
+  --border:rgba(255,255,255,.22);
   --text:#eef2ff;
   --muted:#9aa4c7;
   --accent:#5ac8fa;
+  --accent-soft:rgba(90,200,250,.35);
   --danger:#ef4444;
-  --radius:18px;
+  --radius:20px;
+  --blur:26px;
+  --spring:cubic-bezier(.2,.8,.2,1);
 }
 
-*{box-sizing:border-box}
+*{
+  box-sizing:border-box;
+  -webkit-tap-highlight-color:transparent;
+}
 
 body{
   margin:0;
   font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display",Inter,sans-serif;
   background:
-    radial-gradient(1000px 600px at 10% -10%, #1b255a 0%, transparent 45%),
-    radial-gradient(1000px 600px at 90% 10%, #0ea5e9 0%, transparent 40%),
-    var(--bg);
+    radial-gradient(1200px 700px at 10% -10%, #1b255a 0%, transparent 45%),
+    radial-gradient(1200px 700px at 90% 10%, #0ea5e9 0%, transparent 40%),
+    linear-gradient(180deg,#030712,#060b1a);
   color:var(--text);
+  min-height:100vh;
+  animation:fadeIn .8s ease;
 }
 
-/* ========== GLASS CORE ========== */
+/* ================== GLOBAL MOTION ================== */
+@keyframes fadeIn{
+  from{opacity:0;transform:translateY(12px)}
+  to{opacity:1;transform:none}
+}
+
+/* ================== GLASS CORE ================== */
 .glass{
-  background:linear-gradient(180deg,rgba(255,255,255,.18),rgba(255,255,255,.05));
-  backdrop-filter:blur(22px);
-  -webkit-backdrop-filter:blur(22px);
+  background:
+    linear-gradient(180deg,
+      rgba(255,255,255,.22),
+      rgba(255,255,255,.06)
+    );
+  backdrop-filter:blur(var(--blur)) saturate(160%);
+  -webkit-backdrop-filter:blur(var(--blur)) saturate(160%);
   border:1px solid var(--border);
   border-radius:var(--radius);
-  box-shadow:0 30px 90px rgba(0,0,0,.45);
+  box-shadow:
+    0 30px 90px rgba(0,0,0,.45),
+    inset 0 1px 0 rgba(255,255,255,.35);
+  transition:
+    transform .45s var(--spring),
+    box-shadow .45s var(--spring),
+    background .45s;
 }
 
-/* ========== LOGIN ========== */
+.glass:hover{
+  transform:translateY(-3px) scale(1.01);
+  box-shadow:
+    0 40px 110px rgba(0,0,0,.55),
+    inset 0 1px 0 rgba(255,255,255,.45);
+}
+
+/* ================== LOGIN ================== */
 .login{
   max-width:420px;
-  margin:15vh auto;
-  padding:28px;
+  margin:14vh auto;
+  padding:30px;
+  animation:pop .7s var(--spring);
 }
-.login h2{margin-top:0}
+
+@keyframes pop{
+  from{opacity:0;transform:scale(.92) translateY(20px)}
+  to{opacity:1;transform:none}
+}
+
+.login h2{
+  margin:0 0 14px;
+  font-weight:600;
+  letter-spacing:.3px;
+}
+
 input{
   width:100%;
-  padding:14px;
-  margin-top:12px;
-  border-radius:14px;
-  border:1px solid rgba(255,255,255,.2);
-  background:rgba(255,255,255,.1);
+  padding:15px 16px;
+  margin-top:14px;
+  border-radius:16px;
+  border:1px solid rgba(255,255,255,.25);
+  background:rgba(255,255,255,.12);
   color:var(--text);
+  font-size:15px;
+  transition:
+    border .35s,
+    background .35s,
+    box-shadow .35s;
 }
-input:focus{outline:none;border-color:var(--accent)}
+
+input:focus{
+  outline:none;
+  background:rgba(255,255,255,.18);
+  border-color:var(--accent);
+  box-shadow:0 0 0 4px var(--accent-soft);
+}
+
+/* ================== BUTTONS ================== */
 .btn{
-  margin-top:16px;
+  margin-top:18px;
   width:100%;
-  padding:14px;
+  padding:15px;
   border-radius:999px;
   border:none;
-  background:linear-gradient(180deg,#5ac8fa,#0ea5e9);
+  background:
+    linear-gradient(180deg,#7dd3fc,#38bdf8);
   color:#001;
   font-weight:600;
+  font-size:15px;
   cursor:pointer;
+  transition:
+    transform .35s var(--spring),
+    box-shadow .35s,
+    filter .35s;
 }
+
+.btn:hover{
+  transform:translateY(-2px) scale(1.02);
+  box-shadow:0 18px 40px rgba(56,189,248,.45);
+}
+
+.btn:active{
+  transform:scale(.96);
+}
+
+.btn-outline{
+  padding:9px 16px;
+  border-radius:999px;
+  border:1px solid var(--border);
+  background:rgba(255,255,255,.05);
+  color:var(--text);
+  cursor:pointer;
+  transition:
+    background .35s,
+    transform .35s;
+}
+
+.btn-outline:hover{
+  background:rgba(255,255,255,.15);
+  transform:translateY(-1px);
+}
+
 .hidden{display:none}
 
-/* ========== DASHBOARD ========== */
+/* ================== TOPBAR ================== */
 .topbar{
   position:sticky;
   top:12px;
@@ -79,71 +173,117 @@ input:focus{outline:none;border-color:var(--accent)}
   justify-content:space-between;
   align-items:center;
   z-index:10;
+  animation:slideDown .7s var(--spring);
 }
-.topbar h3{margin:0;font-size:18px}
+
+@keyframes slideDown{
+  from{opacity:0;transform:translateY(-18px)}
+  to{opacity:1;transform:none}
+}
+
+.topbar h3{
+  margin:0;
+  font-size:18px;
+  font-weight:600;
+}
 
 .actions{
   display:flex;
   gap:10px;
 }
 
-.btn-outline{
-  padding:8px 14px;
-  border-radius:999px;
-  border:1px solid var(--border);
-  background:transparent;
-  color:var(--text);
-  cursor:pointer;
-}
-
+/* ================== CONTAINER ================== */
 .container{
-  padding:12px;
+  padding:14px;
   max-width:1100px;
   margin:auto;
 }
 
-/* ========== CARDS (MOBILE FIRST) ========== */
+/* ================== CARDS ================== */
 .card{
-  padding:18px;
-  margin-bottom:14px;
+  padding:20px;
+  margin-bottom:16px;
+  animation:cardIn .6s var(--spring);
 }
-.card strong{font-size:16px}
-.card p{margin:6px 0;color:rgba(255,255,255,.8)}
-.card small{color:var(--muted)}
+
+@keyframes cardIn{
+  from{opacity:0;transform:translateY(16px) scale(.98)}
+  to{opacity:1;transform:none}
+}
+
+.card strong{
+  font-size:16px;
+  font-weight:600;
+}
+
+.card p{
+  margin:6px 0;
+  color:rgba(255,255,255,.82);
+}
+
+.card small{
+  color:var(--muted);
+}
 
 .card-actions{
   display:flex;
   justify-content:flex-end;
-  margin-top:10px;
+  margin-top:12px;
 }
 
+/* ================== DELETE ================== */
 .del{
-  background:var(--danger);
+  background:
+    linear-gradient(180deg,#fb7185,#ef4444);
   color:#fff;
   border:none;
-  padding:8px 14px;
+  padding:9px 16px;
   border-radius:999px;
   cursor:pointer;
+  font-weight:500;
+  transition:
+    transform .3s,
+    box-shadow .3s;
 }
 
-/* ========== DESKTOP TABLE ========== */
+.del:hover{
+  transform:translateY(-1px);
+  box-shadow:0 12px 30px rgba(239,68,68,.45);
+}
+
+/* ================== TABLE (DESKTOP) ================== */
 @media(min-width:900px){
   .mobile-list{display:none}
+
   table{
     width:100%;
     border-collapse:collapse;
-    margin-top:18px;
+    margin-top:20px;
+    animation:fadeIn .6s ease;
   }
+
   th,td{
-    padding:12px;
+    padding:14px;
     border-bottom:1px solid rgba(255,255,255,.15);
     text-align:left;
     vertical-align:top;
   }
-  th{color:var(--muted)}
+
+  th{
+    color:var(--muted);
+    font-weight:500;
+  }
+
+  tr{
+    transition:background .25s;
+  }
+
+  tr:hover{
+    background:rgba(255,255,255,.06);
+  }
 }
 
-/* ========== MOBILE ========== */
+/* ================== MOBILE ================== */
 @media(max-width:899px){
   table{display:none}
 }
